# VisualStudioForAtcoder

./: CMakeLists.txt  GenerateAtCoderProjectWin64VS2017.bat  GenerateAtCoderProjectWin64VS2019.bat  README.md  template.cpp
Include/: readme.md
Source/: readme.md
test/: readme.md
